Update KeycloakAdminClientExample.java